# Fobi

./: CMakeLists.txt  RunMain.bat  RunMain.sh
libs/DynamixelSDK-master/c++/example/protocol2.0/read_write/: read_write.cpp
libs/DynamixelSDK-master/c++/example/protocol2.0/read_write/win64/read_write/Release/: read_write.exe.recipe
src/: main.cpp  udp_common.h  udp_server.cpp
src/Mylibs/: DynamixelProperties.h  SimplifyDynamixel.cpp  SimplifyDynamixel.h
